# basic_C

./: #basic.cpp#  #test.cpp#  .#basic.cpp  .gitignore  .scrodEthernetExample.bit.icloud  0_Channel_SiPM.txt  HasPtr.hh  Makefile  README.md  SiPM4.txt  SiPM5.txt  SiPM_scrod4.txt  StrBlob.hh  basic  basic.cpp  basic.hh  cable_asic.txt  classes.cc  classes.hh  file_name  make_trig_cam_rootFiles.sh  person  person.cpp  pixCamera2DHist.cpp  pixel_cable.txt  pixel_cable_channel.txt  qr_TEtDWh.hh  readNum.hh  screens.cc  test
kevin/: CMakeLists.txt  KevinBuild.root  Makefile  cmake_install.cmake  error_directory.txt
kevin/OpNovice-build/: CMakeCache.txt  Makefile  OpNovice  cmake_install.cmake
kevin/buildSend/: ACE  CMakeCache.txt  Data.txt  KevinBuild.root  Makefile  MuonAngle.C  MuonAngleData.txt  MuonCerenkovGeVData  MuonData.C  NetDistanceTable.txt  blah-1.txt  blah.txt  blah1.txt  c1.C  cmake_install.cmake
kevin/data/: A.root  B.root  C.root  D.root  E.root  F.root  README.txt
kevin/histoTemp/: HistoManager.hh
kevin/include/: #Analysis.hh#  #DetectorConstruction.hh#  ACE.hh  ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensDetHit.hh  SensitiveDetector.hh  SteppingAction.hh  TrackingAction.hh  UserEventInformation.hh  UserTrackInformation.hh
kevin/macros/: #beam.mac#  #simple.mac#  beam2.mac  iso.mac  new.mac  simple2.mac  vis.mac
kevin/src/: #ACE.cc#  #DetectorConstruction.cc#  #EventAction.cc#  ACE.cc  ActionInitialization.cc  Analysis.cc  DetectorConstruction.cc  KevinBuild.root  PhysicsList.cc  PrimaryGeneratorAction.cc  (+12 more)
(+139 files in other folders)
